--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ could contribute:
   </li>
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
   <!-- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>; -->
-  <!--  <a href="http://arxiv.org/abs/1409.0393">paper #1</a>, -->
+  <!--  <a href="https://arxiv.org/abs/1409.0393">paper #1</a>, -->
   <!--  <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>, -->
   <!--  <a href="https://arxiv.org/abs/1607.05443">paper #3</a>, -->
   <!--  <a href="https://github.com/QuickChick">code</a>) -->
@@ -116,8 +116,14 @@ could contribute:
 
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
-  
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
+
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on Verification Technology, Systems, and Applications, VSTA 2019</b>
+  <ul>
+  <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org/track/CPP-2019#The-CPP-Series"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair)</b>
   <ul>
@@ -502,7 +508,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Marco Patrignani, and
     Jérémy Thibault.
-    <b><a href="http://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
+    <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     arXiv:1807.04603. July, 2018.
     <ul style="font-size: small">
@@ -555,7 +561,7 @@ MPRI website</a>.</p>
             Arthur Azevedo de Amorim,
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
-    <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
+    <b><a href="https://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
             In <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, pages 79--105, April 2018.
   <ul style="font-size: small">
     <li>A previous draft was entitled
@@ -571,7 +577,7 @@ MPRI website</a>.</p>
             Kenji Maillard,
             Aseem Rastogi, and
             Nikhil Swamy.
-    <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
+    <b><a href="https://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
             In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
             PACMPL, 2(POPL):65:1-65:30, January 2018.
   <ul style="font-size: small">
@@ -610,7 +616,7 @@ MPRI website</a>.</p>
   <!--           Arthur Azevedo de Amorim, -->
   <!--           Boris Eng, and -->
   <!--           Benjamin C. Pierce. -->
-  <!--   <b><a href="http://arxiv.org/abs/1602.04503"> -->
+  <!--   <b><a href="https://arxiv.org/abs/1602.04503"> -->
 
   <!--         Beyond Good and Evil: Formalizing the Security Guarantees -->
   <!--                               of Compartmentalizing Compilation</a></b>. -->
