--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on Verification Technology, Systems, and Applications, VSTA 2019</b>
   <ul>
-  <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+  <li>School: 1-5 July 2019 at University of Luxembourg</li>
   </ul>
   </li>
 
