--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on Verification Technology, Systems, and Applications, VSTA 2019</b>
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course<br/>at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on Verification Technology, Systems, and Applications, VSTA 2019</b>
   <ul>
   <li>School: 1-5 July 2019 at University of Luxembourg</li>
   </ul>
