--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@ could contribute:
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</b>
-  <!-- <ul> -->
-  <!-- <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</b> -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member)
   <!-- <ul> -->
