--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@ could contribute:
   <!-- </ul> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/">
-    IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
-    (General Chair)
-  <!-- <ul> -->
-  <!-- <li>Submission deadline: 4 August 2016</li> -->
-  <!-- <li>Conference: 26-28 April 2017, Paris, France</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/"> -->
+  <!--   IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a> -->
+  <!--   (General Chair) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 4 August 2016</li> -\-> -->
+  <!-- <\!-- <li>Conference: 26-28 April 2017, Paris, France</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting 2017</a> (Co-organizer) -->
   <!-- <ul> -->
