--- a/students.html
+++ b/students.html
@@ -30,7 +30,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-06:<!-- <br/> -->
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-06:<br/>
     <a href="https://arxiv.org/abs/1807.04603">The Formal Foundations of Secure Compilation</a></li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05</li>
   </ul>
