--- a/students.html
+++ b/students.html
@@ -32,7 +32,8 @@
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-06:<br/>
     <a href="https://arxiv.org/abs/1807.04603">The Formal Foundations of Secure Compilation</a></li>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05</li>:
+    <a href="https://arxiv.org/abs/1807.04603">Robust Property Preservation for Secure Compilation</a>.
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]</div></li>
 
