--- a/students.html
+++ b/students.html
@@ -39,9 +39,9 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></li>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-08:
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-08:<br/>
     Secure Compartmentalizing Compilation to a Tagged Architecture</li>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
     <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]</div></li>
