--- a/students.html
+++ b/students.html
@@ -55,24 +55,10 @@
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a>
-  <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-04:
-      Semantic Foundations for F*</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a>
   <ul>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01:<br/>
       Formally Secure Compilation Despite Dynamic Compromise</li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a>
-  <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> since 2017-01:
-      Meta-programming and Tactics in F*</li>
   </ul>
   </li>
 
@@ -104,6 +90,20 @@
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> from 2017-01 to 2018-11:
+      Meta-programming and Tactics in F*</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a>
+  <ul>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2017-04 to 2018-09:
+      Semantic Foundations for F*</li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
