--- a/students.html
+++ b/students.html
@@ -94,7 +94,7 @@
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> from 2017-01 to 2018-11:
-      Meta-programming and Tactics in F*</li>
+      Implementing Meta-programming and Tactics in F*</li>
   </ul>
   </li>
 
