--- a/students.html
+++ b/students.html
@@ -100,7 +100,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2017-04 to 2018-09:
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2017-04 to 2018-09:<br/>
       Semantic Foundations for F*</li>
   </ul>
   </li>
