--- a/students.html
+++ b/students.html
@@ -97,6 +97,7 @@
       Implementing Meta-programming and Tactics in F*</li>
   </ul>
   </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a>
   <ul>
