--- a/students.html
+++ b/students.html
@@ -91,6 +91,17 @@
 
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern from 2018-10 to 2019-01:<br/>
+      Secure Compilation of Low? and C to WebAssembly.</li>
+  </ul>
+  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at University of Chile]</div></li>
+
+•  () – Secure Compilation of Low? and C to WebAssembly. Research Intern, October 2018 – January 2019.
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> from 2017-01 to 2018-11:<br/>
