--- a/students.html
+++ b/students.html
@@ -114,7 +114,7 @@
       Semantic Foundations for F*</li>
   </ul>
   </li>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc at University of Ljubljana]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc at \href{https://www.fmf.uni-lj.si/en/}{University of Ljubljana}]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
