--- a/students.html
+++ b/students.html
@@ -57,8 +57,8 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2019-03:<br/>
-      The Formal Semantics and Evolution of the F* Verification System</li>
+    <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2019-03:<br/>
+      <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
   </ul>
   </li>
 
