--- a/students.html
+++ b/students.html
@@ -71,7 +71,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2018-07 to 2019-07:<br/>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, since 2018-07:<br/>
      <a href="https://www.fstar-lang.org">F* system for program verification</a></li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
      <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a></li>
