--- a/students.html
+++ b/students.html
@@ -80,8 +80,10 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-04:
-    Secure compilation</li>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-11:
+    Towards Formally Secure Compartmentalization for C</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-04 to 2018-10:
+    Memory Sharing for a Compartmentalizing Compiler</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="">Orléans University</a>]</div></li>
 
