--- a/students.html
+++ b/students.html
@@ -78,6 +78,13 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
+  <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a></li>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> starting 2019-05:<br/>
+    Relational Dijkstra Monads</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="">Orléans University</a>]</div></li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-11:<br/>
@@ -85,7 +92,7 @@
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-04 to 2018-10:<br/>
     Memory Sharing for a Compartmentalizing Compiler</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="">Orléans University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.univ-orleans.fr/en/sciences-techniques/info">Orléans University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
 
