--- a/students.html
+++ b/students.html
@@ -83,7 +83,7 @@
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> starting 2019-05:<br/>
     Relational Dijkstra Monads</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="">Orléans University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.informatique.univ-paris-diderot.fr">Paris 7</a> and <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
   <ul>
