--- a/students.html
+++ b/students.html
@@ -154,6 +154,7 @@
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:
     <a href="https://arxiv.org/abs/1802.00588">Secure compilation proofs in Coq</a></li>
   </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nozominetworks.com/">Nozomi Networks</a>]</div></li>  
 
   <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a>
   <ul>
