--- a/students.html
+++ b/students.html
@@ -107,7 +107,7 @@
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a>
   <ul>
     <li style="margin-top: 1ex;">Research Intern from 2018-10 to 2019-01:<br/>
-      Secure Compilation of Low? and C to WebAssembly.</li>
+      Secure Compilation of Low* and C to WebAssembly.</li>
   </ul>
   </li>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at University of Chile]</div></li>
