--- a/publications.html
+++ b/publications.html
@@ -402,6 +402,15 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
+<h3>Book Chapter</h3>
+<ol start="32" style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">
+   Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
+   Hri&#355;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
+   <b>Luck: A Probabilistic Language for Testing</b>. To appear in
+   Foundations of Probabilistic Programming.</li>
+</ol>
+
 <h3>Editor</h3>
 <ol start="32" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
