--- a/publications.html
+++ b/publications.html
@@ -459,9 +459,9 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
     </ul>
     </li>
-  <!-- <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://hritcu.wordpress.com/publications/masters-thesis/">Step-indexed Semantic Model of Types for the Functional Object Calculus</a>. Master's Thesis, Saarland University, Saarbr&uuml;cken, Germany, May 2007. -->
-  <!-- <ul style="font-size: small"> -->
-  <!-- <li>Awarded the <a href="http://www.fdsi.org/index.php?id=7">G&uuml;nter-Hotz Medal</a> by the "<a href="http://www.fdsi.org/">Freunde der Saarbr&uuml;cker Informatik</a>".</li> -->
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://hritcu.wordpress.com/publications/masters-thesis/">Step-indexed Semantic Model of Types for the Functional Object Calculus</a>. Master's Thesis, Saarland University, Saarbr&uuml;cken, Germany, May 2007.
+  <ul style="font-size: small">
+  <li>Awarded the <a href="http://www.fdsi.org/index.php?id=7">G&uuml;nter-Hotz Medal</a> by the "<a href="http://www.fdsi.org/">Freunde der Saarbr&uuml;cker Informatik</a>".</li>
   </ul>
   </li>
     <!--   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://hritcu.wordpress.com/publications/adf-thesis/">Agent Developing Platform: Agent Communication</a>. Licentiate Thesis. Advisor: Sabin Buraga, "Alexandru Ioan Cuza" University of Ia&#351;i, Romania, June 2005. -->
