--- a/publications.html
+++ b/publications.html
@@ -489,6 +489,17 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <!--
 -->
+
+<h3>Patent</h3>
+<ol start="32" style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">
+    André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#355;cu.
+    <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
+    2017.
+  </li>
+</ol>
+
+
 <h3>Informal Publications and Drafts</h3>
 <ol start="34" style="width:42em; text-align: left">
 
