--- a/publications.html
+++ b/publications.html
@@ -500,7 +500,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 
-<h3>Informal Publications and Drafts</h3>
+<h3>Recent Drafts</h3>
 <ol start="38" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
@@ -519,6 +519,11 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
           <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
     </ul>
   </li>
+
+
+<h3>Informal Publications and Workshops</h3>
+<ol start="38" style="width:42em; text-align: left">
+
 
   <!-- <li style="margin-bottom: 1ex;"> -->
   <!--           Deepak Garg, -->
