--- a/publications.html
+++ b/publications.html
@@ -504,6 +504,22 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="38" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Kenji Maillard,
+    Danel Ahman,
+    Robert Atkey,
+    Guido Martinez,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Exequiel Rivas, and
+    Éric Tanter.
+    <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
+    arXiv:1903.01237. March, 2019.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Carmine Abate,
     Roberto Blanco,
     Deepak Garg,
