--- a/publications.html
+++ b/publications.html
@@ -525,12 +525,12 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Deepak Garg,
     C&#259;t&#259;lin Hri&#355;cu,
     Marco Patrignani, and
-    Jérémy Thibault,
-    <b><a href="http://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
+    Jérémy Thibault.
+    <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     arXiv:1807.04603. July, 2018.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Supplementary materials including Coq development</a>
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
     </ul>
