--- a/index.html
+++ b/index.html
@@ -741,6 +741,12 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
+  <ul>
+  <li>School: 1-5 July 2019 at University of Luxembourg</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
 
