--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020#The-CPP-Series"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair)</b>
   <ul>
   <!-- <li>Submission deadline: </li> -->
   <li>Conference: 20-21 January 2020, New Orleans, <!-- Louisiana, --> USA</li>
