--- a/index.html
+++ b/index.html
@@ -446,6 +446,9 @@ MPRI website</a>.</p>
 
 <h2 id="group">Research Group</h2>
 
+I am very fortunate to work with a group of outstanding students,
+young researchers, and engineers:
+
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
