--- a/publications.html
+++ b/publications.html
@@ -382,7 +382,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
   <li style="margin-bottom: 1ex;">Gavin M. Bierman, Andrew D. Gordon, C&#259;t&#259;lin Hri&#355;cu, David Langworthy. <b><a href="publications/dminor-jfp2012.pdf">Semantic Subtyping with an SMT Solver</a></b>. <a href="http://www.esaim-m2an.org/action/displayJournal?jid=JFP">Journal of Functional Programming</a>, 22(1):31-105, <a href="http://www.cambridge.org/home/home/item5655304/?site_locale=en_US">Cambridge University Press</a>, March 2012.
   <ul style="font-size: small; margin-top: 0.5ex;">
-    <li>More information can be found on <a href="http://research.microsoft.com/en-us/projects/dminor">the Dminor project website at Microsoft Research</a>.</li>
+    <li>The Dminor implementation is <a href="https://www.microsoft.com/en-us/download/details.aspx?id=52603">still available from Microsoft Research</a></li>
+    <!-- <li>More information can be found on <a href="http://research.microsoft.com/en-us/projects/dminor">the Dminor project website at Microsoft Research</a>.</li> -->
     <li><a href="publications/dminor-icfp2010.pdf">An abridged version</a> appeared in <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>, September 2010</li>
     <!--<li>Microsoft Research technical report (<a href="http://research.microsoft.com/apps/pubs/default.aspx?id=135577">MSR-TR-2010-99</a>), December 2011.</li>-->
     <li>The Dminor model and some of the proofs in this paper are <a href="publications/Dminor-model.zip">formalized in Coq</a>, November 2010.</li>
