--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ could contribute:
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2019/secomp-2019.pdf">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
-    <ul>
-      <li>
-      <b>Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a></b>
-      <!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris --></li>
-    </ul>
+    <!-- <ul> -->
+    <!--   <li> -->
+    <!--   <b>Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a></b> -->
+    <!--   <\!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris -\-></li> -->
+    <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Verification Language for Effectful Programs</a></b>
