--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile, returning in August 2019)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://perso.ens-lyon.fr/adrien.durier">Adrien Durier<a> (PostDoctoral Researcher, starting in fall 2019)</li>
+
 </ul>
 
 <p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
