--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile, returning in August 2019)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://perso.ens-lyon.fr/adrien.durier">Adrien Durier<a> (PostDoctoral Researcher, starting in fall 2019)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://perso.ens-lyon.fr/adrien.durier">Adrien Durier<a> (Postdoctoral Researcher, starting in fall 2019)</li>
 
 </ul>
 
