--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ could contribute:
 
 <ul>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
-                                        Formally Secure Compilation</a></b>
+                                       Formally Secure Compilation</a></b>
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2019/secomp-2019.pdf">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
@@ -119,6 +119,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
   <ul>
+  <li>Application deadline: 10 May 2019</li>
   <li>School: 1-5 July 2019 at University of Luxembourg</li>
   </ul>
   </li>
@@ -476,7 +477,8 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile, returning in August 2019)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://perso.ens-lyon.fr/adrien.durier">Adrien Durier</a> (Postdoctoral Researcher, starting in fall 2019)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, starting in fall 2019)</li>
+<!-- http://perso.ens-lyon.fr/adrien.durier -->
 
 </ul>
 
