--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl20.sigplan.org/home/CPP-2020"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a> (PC Co-Chair)</b>
   <ul>
-  <!-- <li>Submission deadline: </li> -->
-  <li>Conference: 20-21 January 2020, New Orleans, <!-- Louisiana, --> USA</li>
+  <li>Abstract Deadline: 16 October 2019</li>
+  <li>Paper Submission Deadline: 21 October 2019</li>
+  <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li>
   </ul>
   </li>
 
