--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
   <ul>
-  <li>Submission deadline: 8 April 2019</li>
+  <li>Abstract deadline: 15 April 2019</li>
+  <li>Submission deadline: 22 April 2019</li>
   <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li>
   </ul>
   </li>
