--- a/publications.html
+++ b/publications.html
@@ -39,8 +39,8 @@
     Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy,
-    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
-   To appear in <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming (ESOP)</a>, 2019.
+    <b><a href="https://fstar-lang.org/papers/metafstar">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
+   In <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming (ESOP)</a>, pages 30-59. Springer, 2019.
   </li>
 
   <li style="margin-bottom: 1ex;">
