--- a/index.html
+++ b/index.html
@@ -517,7 +517,8 @@ young researchers, and engineers:
     Jérémy Thibault.
     <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
-    arXiv:1807.04603. July, 2018.
+    To appear in <a href="https://web.stevens.edu/csf2019/index.html">32nd
+    IEEE Computer Security Foundations Symposium (CSF)</a>, June 2019.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
       <li>A previous extended abstract was called
