--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,24 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Carmine Abate,
+    Roberto Blanco,
+    Deepak Garg,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Marco Patrignani, and
+    Jérémy Thibault.
+    <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
+      Exploring Robust Property Preservation for Secure Compilation</a></b>.
+    To appear in <a href="https://web.stevens.edu/csf2019/index.html">32nd
+    IEEE Computer Security Foundations Symposium (CSF)</a>, June 2019.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
+      <li>A previous extended abstract was called
+          <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Guido Martínez,
     Danel Ahman,
     Victor Dumitrescu,
@@ -338,7 +356,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol start="25" style="width:42em; text-align: left">
+<ol start="26" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu,
     Leonidas Lampropoulos,
@@ -398,13 +416,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="30" style="width:42em; text-align: left">
+<ol start="31" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="32" style="width:42em; text-align: left">
+<ol start="33" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#355;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -413,7 +431,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="33" style="width:42em; text-align: left">
+<ol start="34" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.<br/>
   <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
@@ -443,7 +461,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="34" style="width:42em; text-align: left">
+<ol start="35" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
@@ -492,7 +510,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="37" style="width:42em; text-align: left">
+<ol start="38" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#355;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -502,7 +520,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 
 <h3>Recent Drafts</h3>
-<ol start="38" style="width:42em; text-align: left">
+<ol start="39" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Kenji Maillard,
@@ -517,23 +535,6 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     <ul style="font-size: small">
       <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Carmine Abate,
-    Roberto Blanco,
-    Deepak Garg,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Marco Patrignani, and
-    Jérémy Thibault.
-    <b><a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
-      Exploring Robust Property Preservation for Secure Compilation</a></b>.
-    arXiv:1807.04603. July, 2018.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
-      <li>A previous extended abstract was called
-          <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
     </ul>
   </li>
 </ol>
