--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ young researchers, and engineers:
 
   <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a> (Research Intern, Paris 7 University, starting in May 2019)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania, starting in July 2019)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, <!-- Romania, --> starting in July 2019)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://artagnon.com">Ramkumar Ramachandra</a> (Research Intern / Engineer, starting in August 2019)</li>
 
