--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ MPRI website</a>.</p>
 I am very fortunate to work with a group of outstanding students,
 young researchers, and engineers:
 
-<ul style="width:42em; text-align: left">
+<ol style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
 
@@ -481,7 +481,7 @@ young researchers, and engineers:
   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, starting in fall 2019)</li>
 <!-- http://perso.ens-lyon.fr/adrien.durier -->
 
-</ul>
+</ol>
 
 <p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
 
