--- a/index.html
+++ b/index.html
@@ -500,7 +500,9 @@ young researchers, and engineers:
     Exequiel Rivas, and
     Éric Tanter.
     <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
-    arXiv:1903.01237. March, 2019.
+    To appear in <a href="https://icfp19.sigplan.org/">24th ACM
+    SIGPLAN International Conference on Functional Programming (ICFP)</a>,
+    August 2019.
     <ul style="font-size: small">
       <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
       <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
