--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,24 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Kenji Maillard,
+    Danel Ahman,
+    Robert Atkey,
+    Guido Martinez,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Exequiel Rivas, and
+    Éric Tanter.
+    <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
+    To appear in <a href="https://icfp19.sigplan.org/">24th ACM
+    SIGPLAN International Conference on Functional Programming (ICFP)</a>,
+    August 2019.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Carmine Abate,
     Roberto Blanco,
     Deepak Garg,
